// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox 1`] = `
<div style="<removed>">
  <div
    data-size="sm"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="checkbox"
        name="sm-default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="checkbox"
        checked
        name="sm-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        data-indeterminate="true"
        type="checkbox"
        name="sm-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="checkbox"
        name="sm-disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="checkbox"
        checked
        name="sm-disabled-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        data-indeterminate="true"
        type="checkbox"
        name="sm-disabled-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="checkbox"
        name="sm-invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="checkbox"
        checked
        name="sm-invalid-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        data-indeterminate="true"
        type="checkbox"
        name="sm-invalid-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="checkbox"
        name="sm-read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="checkbox"
        checked
        name="sm-read-only-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        data-indeterminate="true"
        type="checkbox"
        name="sm-read-only-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="checkbox"
        name="md-default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="checkbox"
        checked
        name="md-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        data-indeterminate="true"
        type="checkbox"
        name="md-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="checkbox"
        name="md-disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="checkbox"
        checked
        name="md-disabled-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        data-indeterminate="true"
        type="checkbox"
        name="md-disabled-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="checkbox"
        name="md-invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="checkbox"
        checked
        name="md-invalid-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        data-indeterminate="true"
        type="checkbox"
        name="md-invalid-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="checkbox"
        name="md-read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="checkbox"
        checked
        name="md-read-only-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        data-indeterminate="true"
        type="checkbox"
        name="md-read-only-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="checkbox"
        name="lg-default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="checkbox"
        checked
        name="lg-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        data-indeterminate="true"
        type="checkbox"
        name="lg-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="checkbox"
        name="lg-disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="checkbox"
        checked
        name="lg-disabled-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        data-indeterminate="true"
        type="checkbox"
        name="lg-disabled-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="checkbox"
        name="lg-invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="checkbox"
        checked
        name="lg-invalid-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        data-indeterminate="true"
        type="checkbox"
        name="lg-invalid-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="checkbox"
        name="lg-read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="checkbox"
        checked
        name="lg-read-only-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        data-indeterminate="true"
        type="checkbox"
        name="lg-read-only-indeterminate"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div style="<removed>">
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Fullt navn
    </label>
    <input
      type="text"
      value
      id="<removed>"
    >
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Html Size 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Input with size
  </label>
  <input
    size="10"
    type="text"
    id="<removed>"
  >
</ds-field>
`;

exports[`Input Types 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Checkbox
  </label>
  <input
    type="checkbox"
    checked
    id="<removed>"
  >
</ds-field>
<ds-field data-clickdelegatefor="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Radio
  </label>
  <input
    type="radio"
    checked
    id="<removed>"
  >
</ds-field>
<ds-field data-clickdelegatefor="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Switch
  </label>
  <input
    role="switch"
    type="checkbox"
    checked
    id="<removed>"
  >
</ds-field>
`;

exports[`Preview 1`] = `
<input
  aria-invalid="false"
  aria-label="input"
  type="text"
  checked
  name="inputs"
>
`;

exports[`Radio 1`] = `
<div>
  <div
    data-size="sm"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        name="sm-Default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        checked
        name="sm-Checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="radio"
        name="sm-Disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="radio"
        checked
        name="sm-Disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="radio"
        name="sm-Invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="radio"
        checked
        name="sm-Invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="radio"
        name="sm-Read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="radio"
        checked
        name="sm-Read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        name="md-Default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        checked
        name="md-Checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="radio"
        name="md-Disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="radio"
        checked
        name="md-Disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="radio"
        name="md-Invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="radio"
        checked
        name="md-Invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="radio"
        name="md-Read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="radio"
        checked
        name="md-Read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        name="lg-Default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        type="radio"
        checked
        name="lg-Checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="radio"
        name="lg-Disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        disabled
        type="radio"
        checked
        name="lg-Disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="radio"
        name="lg-Invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="true"
        type="radio"
        checked
        name="lg-Invalid"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="radio"
        name="lg-Read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        readonly
        type="radio"
        checked
        name="lg-Read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Switch 1`] = `
<div style="<removed>">
  <div
    data-size="sm"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        type="checkbox"
        name="sm-default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        type="checkbox"
        checked
        name="sm-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        disabled
        type="checkbox"
        name="sm-disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        disabled
        type="checkbox"
        checked
        name="sm-disabled-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        readonly
        type="checkbox"
        name="sm-read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        readonly
        type="checkbox"
        checked
        name="sm-read-only-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        type="checkbox"
        name="md-default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        type="checkbox"
        checked
        name="md-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        disabled
        type="checkbox"
        name="md-disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        disabled
        type="checkbox"
        checked
        name="md-disabled-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        readonly
        type="checkbox"
        name="md-read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        readonly
        type="checkbox"
        checked
        name="md-read-only-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        type="checkbox"
        name="lg-default"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        type="checkbox"
        checked
        name="lg-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        disabled
        type="checkbox"
        name="lg-disabled"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        disabled
        type="checkbox"
        checked
        name="lg-disabled-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        readonly
        type="checkbox"
        name="lg-read-only"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        role="switch"
        readonly
        type="checkbox"
        checked
        name="lg-read-only-checked"
        id="<removed>"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Text 1`] = `
<div>
  <div
    data-size="sm"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Small
    </h2>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
      <input
        data-size="sm"
        type="text"
        value="Value"
        name="sm-default"
        id="<removed>"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
      <input
        disabled
        data-size="sm"
        type="text"
        value="Value"
        name="sm-disabled"
        id="<removed>"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
      <input
        aria-invalid="true"
        data-size="sm"
        type="text"
        value="Value"
        name="sm-invalid"
        id="<removed>"
        aria-describedby="<removed>"
      >
      <p
        data-field="validation"
        id="<removed>"
      >
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
      <input
        readonly
        data-size="sm"
        type="text"
        value="Value"
        name="sm-read-only"
        id="<removed>"
      >
    </ds-field>
  </div>
  <div
    data-size="md"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Medium
    </h2>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
      <input
        data-size="md"
        type="text"
        value="Value"
        name="md-default"
        id="<removed>"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
      <input
        disabled
        data-size="md"
        type="text"
        value="Value"
        name="md-disabled"
        id="<removed>"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
      <input
        aria-invalid="true"
        data-size="md"
        type="text"
        value="Value"
        name="md-invalid"
        id="<removed>"
        aria-describedby="<removed>"
      >
      <p
        data-field="validation"
        id="<removed>"
      >
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
      <input
        readonly
        data-size="md"
        type="text"
        value="Value"
        name="md-read-only"
        id="<removed>"
      >
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="<removed>"
  >
    <h2
      data-size="2xs"
      style="<removed>"
    >
      Large
    </h2>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
      <input
        data-size="lg"
        type="text"
        value="Value"
        name="lg-default"
        id="<removed>"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
      <input
        disabled
        data-size="lg"
        type="text"
        value="Value"
        name="lg-disabled"
        id="<removed>"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
      <input
        aria-invalid="true"
        data-size="lg"
        type="text"
        value="Value"
        name="lg-invalid"
        id="<removed>"
        aria-describedby="<removed>"
      >
      <p
        data-field="validation"
        id="<removed>"
      >
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
      <input
        readonly
        data-size="lg"
        type="text"
        value="Value"
        name="lg-read-only"
        id="<removed>"
      >
    </ds-field>
  </div>
</div>
`;
